--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,22 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["code", "validator", "leetcode", "dio"],
+  "keywords": [
+    "code",
+    "validator",
+    "leetcode",
+    "dio"
+  ],
   "author": "Diego Rapichan",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "vm2": "^3.9.19",
-    "morgan": "^1.10.0"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "vm2": "^3.9.19"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.11"
   }
 }
