--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "description": "Frontend para sistema de validação de código",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@monaco-editor/react": "^4.7.0",
     "axios": "^1.6.0",
-    "@monaco-editor/react": "^4.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +33,6 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   }
 }
